<resources>
    <string name="app_name">Pothub</string>

    <!-- Auth -->

    <string name="Auth_signup">Sign up</string>
    <string name="Auth_signin">Sign in</string>
    <string name="Auth_donthaveaccount">Don\'t have an account?</string>
    <string name="Auth_alreadyhaveaccount">Already have an account?</string>
    <string name="Auth_mail">E-mail</string>
    <string name="Auth_username">Username</string>
    <string name="Auth_password">Password</string>
    <string name="Auth_forgot">Forgot your password?</string>
    <string name="logo_text"><font color="#FD7739">POT</font><font color="#FFFFFF">HUB</font></string>
    <string name="Auth_confirmsignup">Enter the code that was sent by email to confirm your account</string>

    <!-- Forgot password -->

    <string name="ResetCR_message1">Enter your username and we will send you instructions by email to reset your password</string>
    <string name="ResetCR_continue">Continue</string>
    <string name="ResetCR_backto">Back to sign in</string>
    <string name="ResetCR_title2">Type your code</string>
    <string name="ResetCR_password">New password</string>
    <string name="ResetCR_message2">Enter the code that was sent by email to reset your account</string>
    <string name="ResetCR_message3">Set your new password so you can login and access Pothub</string>
    <string name="ResetCR_title3">Create new password</string>

    <!-- Change password -->
    <string name="ChangeCR_title">Change password</string>
    <string name="ChangeCR_message">Fill in the fields to change your password</string>
    <string name="ChangeCR_codemessage">Enter the code that was sent by email to change your password</string>
    <string name="ChangeCR_oldpassword">Old password</string>
    <string name="ChangeCR_newpassword">New password</string>
    <string name="ChangeCR_continue">Continue</string>
    <string name="ChangeCR_changepassword">Change password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_live_map">LiveMapActivity</string>
    <string name="title_activity_maps_activitytw">MapsActivitytw</string>

</resources>