<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    android:orientation="vertical"
    tools:context=".authentication.views.fragments.SigninFragment">

    <EditText
        android:id="@+id/fragmentSignup_mail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_edit_text"
        android:backgroundTint="@color/edit_text_grey"
        android:drawableStart="@drawable/ic_mail"
        android:drawablePadding="16dp"
        android:hint="@string/Auth_mail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/text_in_edit"
        android:textColorHint="@color/text_in_edit"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/fragmentSignup_username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_edit_text"
        android:backgroundTint="@color/edit_text_grey"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="16dp"
        android:hint="@string/Auth_username"
        android:inputType="text"
        android:maxLength="32"
        android:minHeight="48dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/text_in_edit"
        android:textColorHint="@color/text_in_edit"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/fragmentSignup_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_edit_text"
        android:backgroundTint="@color/edit_text_grey"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="16dp"
        android:hint="@string/Auth_password"
        android:inputType="textPassword"
        android:maxLength="32"
        android:minHeight="48dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/text_in_edit"
        android:textColorHint="@color/text_in_edit"
        tools:ignore="TextContrastCheck" />

    <android.widget.Button
        android:id="@+id/fragmentSignup_signupbtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_edit_text"
        android:backgroundTint="@color/edit_text_orange"
        android:fontFamily="sans-serif-medium"
        android:text="@string/Auth_signup"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/fragmentSignup_alreadyhaveanaccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Auth_alreadyhaveaccount"
        android:textAlignment="center"
        android:textColor="@color/text_in_edit" />

    <android.widget.Button
        android:id="@+id/fragmentSignup_signinbtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_edit_text"
        android:backgroundTint="#3F3F3F"
        android:fontFamily="sans-serif-medium"
        android:text="@string/Auth_signin"
        android:textAllCaps="false"
        android:textColor="@color/text_in_edit"
        android:textSize="20sp" />


</LinearLayout>