<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    tools:context=".authentication.views.fragments.ResetCRUsernameFragment">

    <TextView
        android:id="@+id/fragmentCR1_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/Auth_forgot"
        android:textColor="@color/edit_text_orange"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fragmentCR1_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/ResetCR_message1"
        android:textAlignment="center"
        android:textColor="@color/text_in_edit"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentCR1_title" />

    <EditText
        android:id="@+id/fragmentCR1_username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingEnd="16dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_edit_text"
        android:backgroundTint="@color/edit_text_grey"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="16dp"
        android:hint="@string/Auth_username"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="16dp"
        android:textColor="@color/text_in_edit"
        android:textColorHint="@color/text_in_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentCR1_message"
        tools:ignore="TextContrastCheck" />

    <android.widget.Button
        android:id="@+id/fragmentCR1_continue"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_edit_text"
        android:backgroundTint="@color/edit_text_orange"
        android:fontFamily="sans-serif-medium"
        android:text="@string/ResetCR_continue"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentCR1_username" />

    <TextView
        android:id="@+id/fragmentCR1_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/ResetCR_backto"
        android:textColor="@color/edit_text_orange"
        android:textSize="16sp"
        android:clickable="true"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentCR1_continue" />


</androidx.constraintlayout.widget.ConstraintLayout>