<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".auth.ConfirmSignupActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activityConfirmSignup_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="270dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/activityConfirmSignup_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/ResetCR_title2"
            android:textColor="@color/edit_text_orange"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/activityConfirmSignup_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:text="@string/Auth_confirmsignup"
            android:textAlignment="center"
            android:textColor="@color/text_in_edit"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activityConfirmSignup_title" />

        <com.chaos.view.PinView
            android:id="@+id/activityConfirmSignup_code"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:cursorVisible="false"
            android:inputType="numberPassword"
            android:itemBackground="@color/edit_text_grey"
            android:padding="16dp"
            android:textColor="@color/text_in_edit"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cursorColor="@color/edit_text_orange"
            app:cursorWidth="2dp"
            app:hideLineWhenFilled="false"
            app:itemCount="6"
            app:itemHeight="48dp"
            app:itemRadius="20dp"
            app:itemSpacing="8dp"
            app:itemWidth="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activityConfirmSignup_message"
            app:lineColor="@color/edit_text_grey"
            app:lineWidth="1dp"
            app:viewType="rectangle" />

        <android.widget.Button
            android:id="@+id/activityConfirmSignup_continue"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="80dp"
            android:layout_marginTop="17dp"
            android:background="@drawable/custom_edit_text"
            android:backgroundTint="@color/edit_text_orange"
            android:fontFamily="sans-serif-medium"
            android:text="@string/ResetCR_continue"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activityConfirmSignup_code" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>